--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/IniciarSesion.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/IniciarSesion.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Web_TrabajoFidelitas.Entidades.Usuario
+@{
     ViewBag.Title = "IniciarSesion";
     Layout = "~/Views/Shared/_LayoutExterno.cshtml";
 }
@@ -22,42 +23,27 @@
 
                                 <div class="pt-4 pb-2">
                                     <h5 class="card-title text-center pb-0 fs-4">Iniciar Sesión en tu Cuenta</h5>
-                                    <p class="text-center small">Ingresa tu nombre de usuario y contraseña para iniciar sesión</p>
+                                    <p class="text-center small"></p>
                                 </div>
-
-                                <form class="row g-3 needs-validation" novalidate>
-
-                                    <div class="col-12">
-                                        <label for="yourUsername" class="form-label">Nombre de Usuario</label>
-                                        <div class="input-group has-validation">
-                                            <span class="input-group-text" id="inputGroupPrepend"></span>
-                                            <input type="text" name="username" class="form-control" id="yourUsername" required>
-                                            <div class="invalid-feedback">Por favor, ingresa tu nombre de usuario.</div>
-                                        </div>
+                                @using (Html.BeginForm("InicioSesion", "Inicio"))
+                                {
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.emailUsuario, new { @class = "form-control form-control-user", @placeholder = "Correo" })
+                                    </div>
+                                    <div class="form-group">
+                                        @Html.PasswordFor(m => m.contrasenaUsuario, new { @class = "form-control form-control-user", @placeholder = "Contraseña" })
                                     </div>
 
-                                    <div class="col-12">
-                                        <label for="yourPassword" class="form-label">Contraseña</label>
-                                        <input type="password" name="password" class="form-control" id="yourPassword" required>
-                                        <div class="invalid-feedback">Por favor, ingresa tu contraseña.</div>
-                                    </div>
+                                    <input type="submit" class="btn btn-primary btn-user btn-block" value="Iniciar Sesión">
 
-                                    <div class="col-12">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
-                                            <label class="form-check-label" for="rememberMe">Recordarme</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <a class="btn btn-primary w-100" href="@Url.Action("Index","Home")">Iniciar sesión</a>
-                                    </div>
+
                                     <div class="col-12">
                                         <p class="small mb-0">¿No tienes cuenta? <a href="@Url.Action("RegistrarUsuario","Usuario")">Crear una cuenta</a></p>
                                     </div>
                                     <div class="col-12">
                                         <p class="small mb-0">Recuperar Acceso <a href="@Url.Action("RecuperarAcceso","Usuario")">Recuperar acceso</a></p>
                                     </div>
-                                </form>
+                                }
 
                             </div>
                         </div>
