--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/RegistrarUsuario.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/RegistrarUsuario.cshtml
@@ -23,7 +23,7 @@
 
                                 <div class="pt-4 pb-2">
                                     <h5 class="card-title text-center pb-0 fs-4">Crear una Cuenta</h5>
-                                    <p class="text-center small">Ingresa tus datos personales para crear una cuenta</p>
+                                    <p class="text-center small"></p>
                                 </div>
 
                                 <form class="row g-3 needs-validation" novalidate>
