--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Shared/_Layout.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
 
             <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
 
-                <span class="d-none d-md-block dropdown-toggle ps-2"><i class="bi bi-person-circle mx-2"></i>K. Anderson</span>
+                <span class="d-none d-md-block dropdown-toggle ps-2"><i class="bi bi-person-circle mx-2"> @Session["NombreUsuario"].ToString()</i></span>
             </a><!-- End Profile Iamge Icon -->
 
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
@@ -81,7 +81,7 @@
                     <hr class="dropdown-divider">
                 </li>
                 <li>
-                    <a class="dropdown-item d-flex align-items-center" href="@Url.Action("IniciarSesion","Usuario")">
+                    <a class="dropdown-item d-flex align-items-center" href="@Url.Action("CerrarSesion","Usuario")">
                         <i class="bi bi-box-arrow-right"></i>
                         <span>Sign Out</span>
                     </a>
