--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/IniciarSesion.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/IniciarSesion.cshtml
@@ -25,13 +25,13 @@
                                     <h5 class="card-title text-center pb-0 fs-4">Iniciar Sesión en tu Cuenta</h5>
                                     <p class="text-center small"></p>
                                 </div>
-                                @using (Html.BeginForm("InicioSesion", "Inicio"))
+                                @using (Html.BeginForm("IniciarSesion", "Usuario"))
                                 {
                                     <div class="form-group">
-                                        @Html.TextBoxFor(m => m.emailUsuario, new { @class = "form-control form-control-user", @placeholder = "Correo" })
+                                        @Html.TextBoxFor(m => m.emailUsuario, new { @class = "form-control form-control-user my-3", @placeholder = "Correo" })
                                     </div>
                                     <div class="form-group">
-                                        @Html.PasswordFor(m => m.contrasenaUsuario, new { @class = "form-control form-control-user", @placeholder = "Contraseña" })
+                                        @Html.PasswordFor(m => m.contrasenaUsuario, new { @class = "form-control form-control-user my-3", @placeholder = "Contraseña" })
                                     </div>
 
                                     <input type="submit" class="btn btn-primary btn-user btn-block" value="Iniciar Sesión">
