--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/RegistrarUsuario.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/RegistrarUsuario.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Web_TrabajoFidelitas.Entidades.Usuario
+
+@{
     ViewBag.Title = "RegistrarUsuario";
     Layout = "~/Views/Shared/_LayoutExterno.cshtml";
 }
@@ -26,48 +28,39 @@
                                     <p class="text-center small"></p>
                                 </div>
 
-                                <form class="row g-3 needs-validation" novalidate>
+                                @using (Html.BeginForm("RegistrarUsuario", "Usuario", FormMethod.Post, new { @class = "row g-3 needs-validation", novalidate = "novalidate" }))
+                                {
                                     <div class="col-12">
-                                        <label for="yourName" class="form-label">Tu Nombre</label>
-                                        <input type="text" name="name" class="form-control" id="yourName" required>
+                                        @Html.LabelFor(m => m.nombreUsuario, new { @class = "form-label" })
+                                        @Html.TextBoxFor(m => m.nombreUsuario, new { @class = "form-control", @id = "yourName", required = "required" })
                                         <div class="invalid-feedback">Por favor, ingresa tu nombre.</div>
                                     </div>
 
                                     <div class="col-12">
-                                        <label for="yourEmail" class="form-label">Tu Correo Electrónico</label>
-                                        <input type="email" name="email" class="form-control" id="yourEmail" required>
+                                        @Html.LabelFor(m => m.emailUsuario, new { @class = "form-label" })
+                                        @Html.TextBoxFor(m => m.emailUsuario, new { @class = "form-control", @type = "email", @id = "yourEmail", required = "required" })
                                         <div class="invalid-feedback">Por favor, introduce una dirección de correo electrónico válida.</div>
                                     </div>
 
                                     <div class="col-12">
-                                        <label for="yourUsername" class="form-label">Nombre de Usuario</label>
+                                        @Html.LabelFor(m => m.contrasenaUsuario, new { @class = "form-label" })
                                         <div class="input-group has-validation">
                                             <span class="input-group-text" id="inputGroupPrepend"></span>
-                                            <input type="text" name="username" class="form-control" id="yourUsername" required>
+                                            @Html.PasswordFor(m => m.contrasenaUsuario, new { @class = "form-control", @id = "yourUsername", required = "required" })
                                             <div class="invalid-feedback">Por favor, elige un nombre de usuario.</div>
                                         </div>
                                     </div>
 
-                                    <div class="col-12">
-                                        <label for="yourPassword" class="form-label">Contraseña</label>
-                                        <input type="password" name="password" class="form-control" id="yourPassword" required>
-                                        <div class="invalid-feedback">Por favor, ingresa tu contraseña.</div>
-                                    </div>
+                                  
 
-                                    <div class="col-12">
-                                        <div class="form-check">
-                                            <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required>
-                                            <label class="form-check-label" for="acceptTerms">Acepto los <a href="#">términos y condiciones</a></label>
-                                            <div class="invalid-feedback">Debes aceptar antes de enviar.</div>
-                                        </div>
-                                    </div>
+                                    
                                     <div class="col-12">
                                         <button class="btn btn-primary w-100" type="submit">Crear Cuenta</button>
                                     </div>
                                     <div class="col-12">
                                         <p class="small mb-0">¿Ya tienes cuenta? <a href="@Url.Action("IniciarSesion","Usuario")">Iniciar sesión</a></p>
                                     </div>
-                                </form>
+                                }
 
                             </div>
                         </div>
