--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/MostrarClientes.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/MostrarClientes.cshtml
@@ -1,144 +1,92 @@
-﻿<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de Clientes</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .card {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            margin: 20px;
-            overflow: hidden;
-        }
+﻿@model List<Web_TrabajoFidelitas.Entidades.Cliente>
 
-        .card-body {
-            padding: 20px;
-        }
+@{
+    ViewBag.Title = "ConsultaProductos";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-        h4 {
-            margin: 0;
-            font-size: 24px;
-            font-weight: bold;
-        }
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Productos</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="col-sm-12">
+                    <div class="col-sm-12">
 
-        .btn-secondary {
-            background-color: #6c757d;
-            border-color: #6c757d;
-        }
+                        @if (ViewBag.MsjPantalla != null)
+                        {
+                            <div class="alert alert-warning" role="alert" style="text-align:center">
+                                @ViewBag.MsjPantalla
+                            </div>
+                        }
 
-        .table {
-            margin-top: 20px;
-        }
+                        <div style="margin-bottom:1%; text-align:right">
+                            <a class="btn btn-primary" href="@Url.Action("NuevoCliente","Cliente")"> + Agregar</a>
+                        </div>
 
-            .table th {
-                background-color: #f8f9fa;
-                color: #343a40;
-                text-align: center;
-                vertical-align: middle;
-            }
+                        <table id="myDataTable" class="table table-bordered" style="width: 100%;">
+                            <thead>
+                                <tr>
+                                    <th>Id</th>
+                                    <th>Nombre</th>
+                                    <th>Teléfono</th>
+                                    <th>Dirección</th>
+                                    <th>Email</th>
+                                    <th>Estado</th>
+                                    <th>Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>@item.idCliente</td>
+                                        <td>@item.nombreCliente</td>
+                                        <td>@item.telefonoCliente</td>
+                                        <td>@item.direccionCliente</td>
+                                        <td>@item.emailCliente</td>
 
-            .table td {
-                text-align: center;
-                vertical-align: middle;
-            }
+                                            @if (item.estado)
+                                            {
+                                                <td >Activo</td>
+                                            }
+                                            else
+                                            {
+                                                <td >Inactivo</td>
+                                            }
 
-            .table tbody tr:hover {
-                background-color: #f1f1f1;
-            }
+                                        <td>
+                                            <div style="text-align:center">
+                                                <a href="@Url.Action("ActualizarCliente","Cliente", new { id = @item.idCliente })" class="btn btn-sm btn-info"><i class="fa fa-pencil-square-o"></i></a>
+                                                <a href="@Url.Action("EliminarProducto","Producto", new { id = @item.idCliente })" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
 
-       
 
-        .btn-success {
-            margin-bottom: 10px;
-        }
-
-        .btn-danger {
-            margin-bottom: 10px;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="card">
-        <div class="card-body">
-            <div style="display:flex;align-items:center;" class="justify-content-between my-2">
-                <h4>Datos Clientes</h4>
-                <a class="btn btn-secondary" href="@Url.Action("NuevoCliente","Cliente")">Nuevo</a>
+                    </div>
+                </div>
             </div>
-            <hr />
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th><b>N</b>ame</th>
-                        <th>Ext.</th>
-                        <th>City</th>
-                        <th data-type="date" data-format="YYYY/DD/MM">Start Date</th>
-                        <th>Completion</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Unity Pugh</td>
-                        <td>9958</td>
-                        <td>Curicó</td>
-                        <td>2005/02/11</td>
-                        <td>37%</td>
-                        <td style="display:flex;flex-direction:column;">
-                            <a class="btn btn-success" href="@Url.Action("ActualizarCliente","Cliente")">Actualizar</a>
-                            <a class="btn btn-danger" href="">Eliminar</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Theodore Duran</td>
-                        <td>8971</td>
-                        <td>Dhanbad</td>
-                        <td>1999/04/07</td>
-                        <td>97%</td>
-                        <td style="display:flex;flex-direction:column;">
-                            <a class="btn btn-success" href="@Url.Action("ActualizarCliente","Cliente")">Actualizar</a>
-                            <a class="btn btn-danger" href="">Eliminar</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Kylie Bishop</td>
-                        <td>3147</td>
-                        <td>Norman</td>
-                        <td>2005/09/08</td>
-                        <td>63%</td>
-                        <td style="display:flex;flex-direction:column;">
-                            <a class="btn btn-success" href="@Url.Action("ActualizarCliente","Cliente")">Actualizar</a>
-                            <a class="btn btn-danger" href="">Eliminar</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Willow Gilliam</td>
-                        <td>3497</td>
-                        <td>Amqui</td>
-                        <td>2009/29/11</td>
-                        <td>30%</td>
-                        <td style="display:flex;flex-direction:column;">
-                            <a class="btn btn-success" href="@Url.Action("ActualizarCliente","Cliente")">Actualizar</a>
-                            <a class="btn btn-danger" href="">Eliminar</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Blossom Dickerson</td>
-                        <td>5018</td>
-                        <td>Kempten</td>
-                        <td>2006/11/09</td>
-                        <td>17%</td>
-                        <td style="display:flex;flex-direction:column;">
-                            <a class="btn btn-success" href="@Url.Action("ActualizarCliente","Cliente")">Actualizar</a>
-                            <a class="btn btn-danger" href="">Eliminar</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
     </div>
+</div>
 
-</body>
-</html>
+<!-- CDN de DataTables -->
+<link href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#myDataTable').DataTable({
+            language: {
+                url: '//cdn.datatables.net/plug-ins/2.0.2/i18n/es-ES.json',
+            }
+        });
+    });
+</script>
