--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/MostrarCitas.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/MostrarCitas.cshtml
@@ -1,5 +1,64 @@
-﻿<!-- Table with stripped rows -->
-<!-- End Table with stripped rows -->
+﻿<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tabla de Clientes</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .card {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            margin: 20px;
+            overflow: hidden;
+        }
+
+        .card-body {
+            padding: 20px;
+        }
+
+        h4 {
+            margin: 0;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .btn-secondary {
+            background-color: #6c757d;
+            border-color: #6c757d;
+        }
+
+        .table {
+            margin-top: 20px;
+        }
+
+            .table th {
+                background-color: #f8f9fa;
+                color: #343a40;
+                text-align: center;
+                vertical-align: middle;
+            }
+
+            .table td {
+                text-align: center;
+                vertical-align: middle;
+            }
+
+            .table tbody tr:hover {
+                background-color: #f1f1f1;
+            }
+
+
+
+        .btn-success {
+            margin-bottom: 10px;
+        }
+
+        .btn-danger {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
 <div class="card">
     <div class="card-body">
 
