Commit Erick Rivera
Eliminar Clientes

Mostrar Sucursales

--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/MostrarClientes.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/MostrarClientes.cshtml
@@ -60,7 +60,7 @@
                                         <td>
                                             <div style="text-align:center">
                                                 <a href="@Url.Action("ActualizarCliente","Cliente", new { id = @item.idCliente })" class="btn btn-sm btn-info"><i class="fa fa-pencil-square-o"></i></a>
-                                                <a href="@Url.Action("EliminarProducto","Producto", new { id = @item.idCliente })" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a>
+                                                <a href="@Url.Action("EliminarCliente","Cliente", new { id = @item.idCliente })" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a>
                                             </div>
                                         </td>
                                     </tr>
