--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Sucursal/MostrarSucursales.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Sucursal/MostrarSucursales.cshtml
@@ -1,84 +1,91 @@
-﻿<!-- Table with stripped rows -->
-<!-- End Table with stripped rows -->
-<div class="card">
+﻿@model List<Web_TrabajoFidelitas.Entidades.Sucursal>
+
+@{
+    ViewBag.Title = "ConsultarSucursal";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Sucursal</h6>
+    </div>
     <div class="card-body">
+        <div class="table-responsive">
+            <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="col-sm-12">
+                    <div class="col-sm-12">
+
+                        @if (ViewBag.MsjPantalla != null)
+                        {
+                            <div class="alert alert-warning" role="alert" style="text-align:center">
+                                @ViewBag.MsjPantalla
+                            </div>
+                        }
+
+                        <div style="margin-bottom:1%; text-align:right">
+                            <a class="btn btn-primary" href="@Url.Action("NuevaSucursal","Sucursal")"> + Agregar</a>
+                        </div>
+
+                        <table id="myDataTable" class="table table-bordered" style="width: 100%;">
+                            <thead>
+                                <tr>
+                                    <th>Id</th>
+                                    <th>Nombre de la Sucursal</th>
+                                    <th>Direccion Sucursal</th>
+                                    <th>Id de la direccion</th>
+                                    <th>Estado</th>
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>@item.idSucursal</td>
+                                        <td>@item.nombreSucursal</td>
+                                        <td>@item.direccionSucursal</td>
+                                        <td>@item.idCiudadSucursal</td>
+                                        <td>@item.estado</td>
+
+                                        @if (item.estado)
+                                        {
+                                            <td>Activo</td>
+                                        }
+                                        else
+                                        {
+                                            <td>Inactivo</td>
+                                        }
+
+                                        <td>
+                                            <div style="text-align:center">
+                                                <a href="@Url.Action("ActualizarCliente","Cliente", new { id = @item.idSucursal })" class="btn btn-sm btn-info"><i class="fa fa-pencil-square-o"></i></a>
+                                                <a href="@Url.Action("EliminarCliente","Cliente", new { id = @item.idSucursal })" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
 
 
-        <div style="display:flex;align-items:center;" class=" justify-content-between my-2">
-            <h4>Datos Clientes</h4>
-            <a class="btn btn-secondary " href="@Url.Action("NuevoSucursal","Sucursal")">Nuevo</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <hr />
-        <table class="table datatable">
-            <thead>
-                <tr>
-                    <th>
-                        <b>N</b>ame
-                    </th>
-                    <th>Ext.</th>
-                    <th>City</th>
-                    <th data-type="date" data-format="YYYY/DD/MM">Start Date</th>
-                    <th>Completion</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Unity Pugh</td>
-                    <td>9958</td>
-                    <td>Curicó</td>
-                    <td>2005/02/11</td>
-                    <td>37%</td>
-                    <td style="display:flex;flex-direction:column;">
-                        <a class="btn btn-success m-1" href="@Url.Action("ActualizarSucursal","Sucursal")">  Actualizar</a>
-                        <a class="btn btn-danger m-1" href=""> Eliminar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Theodore Duran</td>
-                    <td>8971</td>
-                    <td>Dhanbad</td>
-                    <td>1999/04/07</td>
-                    <td>97%</td>
-                    <td style="display:flex;flex-direction:column;">
-                        <a class="btn btn-success m-1" href="@Url.Action("ActualizarSucursal","Sucursal")">  Actualizar</a>
-                        <a class="btn btn-danger m-1" href=""> Eliminar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Kylie Bishop</td>
-                    <td>3147</td>
-                    <td>Norman</td>
-                    <td>2005/09/08</td>
-                    <td>63%</td>
-                    <td style="display:flex;flex-direction:column;">
-                        <a class="btn btn-success m-1" href="@Url.Action("ActualizarSucursal","Sucursal")">  Actualizar</a>
-                        <a class="btn btn-danger m-1" href=""> Eliminar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Willow Gilliam</td>
-                    <td>3497</td>
-                    <td>Amqui</td>
-                    <td>2009/29/11</td>
-                    <td>30%</td>
-                    <td style="display:flex;flex-direction:column;">
-                        <a class="btn btn-success m-1" href="@Url.Action("ActualizarSucursal","Sucursal")">  Actualizar</a>
-                        <a class="btn btn-danger m-1" href=""> Eliminar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Blossom Dickerson</td>
-                    <td>5018</td>
-                    <td>Kempten</td>
-                    <td>2006/11/09</td>
-                    <td>17%</td>
-                    <td style="display:flex;flex-direction:column;">
-                        <a class="btn btn-success m-1" href="@Url.Action("ActualizarSucursal","Sucursal")">  Actualizar</a>
-                        <a class="btn btn-danger m-1" href=""> Eliminar</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
     </div>
 </div>
+
+<!-- CDN de DataTables -->
+<link href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#myDataTable').DataTable({
+            language: {
+                url: '//cdn.datatables.net/plug-ins/2.0.2/i18n/es-ES.json',
+            }
+        });
+    });
+</script>
