--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Automovil/ActualizarAutomovil.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Automovil/ActualizarAutomovil.cshtml
@@ -1,30 +1,61 @@
-﻿
-<a class="btn btn-primary m-2 my-4" href="@Url.Action("MostrarAutomoviles","Automovil")"><i class="bi bi-arrow-left-circle"></i> Regresar</a>
-<div class="card">
-    <div class="card-body">
-        <h3 class="card-title text-center">Nuevo</h3>
-        <hr />
-        <form class="row g-3">
-            <div class="col-12">
-                <label for="inputNanme4" class="form-label">Your Name</label>
-                <input type="text" class="form-control" id="inputNanme4">
+﻿@model Web_TrabajoFidelitas.Entidades.Automovil
+
+@{
+    ViewBag.Title = "Actualizar Automovil";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<a class="btn btn-primary m-2 my-4" href="@Url.Action("MostrarAutomoviles","Automovil")"><i class="bi bi-arrow-left-circle"></i> Regresar </a>
+<div class="card shadow mb-4">
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8">
+            <div class="card-body" style="margin-top: 20px;">
+                <div class="table-responsive">
+                    <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
+
+                        @if (ViewBag.MsjPantalla != null)
+                        {
+                            <div class="alert alert-warning" role="alert" style="text-align:center">
+                                @ViewBag.MsjPantalla
+                            </div>
+                        }
+
+                        @using (Html.BeginForm("ActualizarAutomovil", "Automovil", FormMethod.Post))
+                        {
+                            @Html.HiddenFor(m => m.idAutomovil)
+                            <div class="form-group my-4">
+                                @Html.Label("ID del Cliente")
+                                @Html.DropDownListFor(m => m.idCliente, ViewBag.IdsClientes as List<SelectListItem>, new { @class = "form-control form-control-user", @required = "true" })
+                            </div>
+                            <div class="form-group my-3">
+                                @Html.Label("Número de Placa")
+                                @Html.TextBoxFor(m => m.placa, new { @class = "form-control", @placeholder = "placa", @required = "true" })
+                                @Html.ValidationMessageFor(m => m.placa, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="form-group my-3">
+                                @Html.Label("Marca del Vehículo")
+                                @Html.TextBoxFor(m => m.marca, new { @class = "form-control", @placeholder = "marca", @required = "true" })
+                                @Html.ValidationMessageFor(m => m.marca, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="form-group my-3">
+                                @Html.Label("Modelo del Vehículo")
+                                @Html.TextBoxFor(m => m.modelo, new { @class = "form-control", @placeholder = "modelo", @required = "true" })
+                                @Html.ValidationMessageFor(m => m.modelo, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="form-group my-3">
+                                @Html.Label("Año del Vehículo")
+                                @Html.TextBoxFor(m => m.ano, new { @class = "form-control", @placeholder = "año", @required = "true" })
+                                @Html.ValidationMessageFor(m => m.ano, "", new { @class = "text-danger" })
+                            </div>
+
+                            <div style="display: flex; align-items: center; flex-direction: column;">
+                                <input type="submit" class="btn btn-primary btn-block" value="Actualizar Automovil" style="margin-top: 20px; margin-bottom: 20px;">
+                            </div>
+                        }
+                    </div>
+                </div>
             </div>
-            <div class="col-12">
-                <label for="inputEmail4" class="form-label">Email</label>
-                <input type="email" class="form-control" id="inputEmail4">
-            </div>
-            <div class="col-12">
-                <label for="inputPassword4" class="form-label">Password</label>
-                <input type="password" class="form-control" id="inputPassword4">
-            </div>
-            <div class="col-12">
-                <label for="inputAddress" class="form-label">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-            </div>
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="reset" class="btn btn-secondary">Reset</button>
-            </div>
-        </form><!-- Vertical Form -->
+        </div>
     </div>
 </div>
