--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Automovil/NuevoAutomovil.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Automovil/NuevoAutomovil.cshtml
@@ -11,7 +11,7 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
             <div class="card-body" style="margin-top: 20px;">
-                <div class="table-responsive">
+                <div class="table-responsive" style="overflow-x: hidden;">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
 
                         @if (ViewBag.MsjPantalla != null)
@@ -21,37 +21,41 @@
                             </div>
                         }
 
-                        @using (Html.BeginForm("NuevoAutomovil", "Automovil", FormMethod.Post))
+                        @using (Html.BeginForm("NuevoAutomovil", "Automovil", FormMethod.Post, new { @class = "row g-3 needs-validation", novalidate = "novalidate" }))
                         {
                             <div class="form-group my-3">
                                 @Html.Label("ID del Cliente")
                                 @Html.DropDownListFor(m => m.idCliente, ViewBag.IdsClientes as List<SelectListItem>, new { @class = "form-control form-control-user", @required = "true" })
+                                <div class="invalid-feedback">Escoge un id del cliente respectivo</div>
                             </div>
                             <div class="form-group my-3">
                                 @Html.Label("Número de Placa")
-                                @Html.TextBoxFor(m => m.placa, new { @class = "form-control", @placeholder = "placa", @required = "true" })
+                                @Html.TextBoxFor(m => m.placa, new { @class = "form-control", @placeholder = "Placa", @required = "true", @maxlength = "6" })
                                 @Html.ValidationMessageFor(m => m.placa, "", new { @class = "text-danger" })
+                                <div class="invalid-feedback">Ingrese los caracteres respectivos de la placa, máximo 6 caracteres</div>
                             </div>
                             <div class="form-group my-3">
                                 @Html.Label("Marca del Vehículo")
-                                @Html.TextBoxFor(m => m.marca, new { @class = "form-control", @placeholder = "marca", @required = "true" })
+                                @Html.TextBoxFor(m => m.marca, new { @class = "form-control", @placeholder = "Marca", @required = "true", @type = "text", @maxlength = "12" })
                                 @Html.ValidationMessageFor(m => m.marca, "", new { @class = "text-danger" })
+                                <div class="invalid-feedback">Ingrese la marca del automóvil</div>
                             </div>
                             <div class="form-group my-3">
                                 @Html.Label("Modelo del Vehículo")
-                                @Html.TextBoxFor(m => m.modelo, new { @class = "form-control", @placeholder = "modelo", @required = "true" })
+                                @Html.TextBoxFor(m => m.modelo, new { @class = "form-control", @placeholder = "Modelo", @required = "true", @type = "text", @maxlength = "25" })
                                 @Html.ValidationMessageFor(m => m.modelo, "", new { @class = "text-danger" })
+                                <div class="invalid-feedback">Ingrese el modelo del automóvil</div>
                             </div>
                             <div class="form-group my-3">
                                 @Html.Label("Año del Vehículo")
-                                @Html.TextBoxFor(m => m.ano, new { @class = "form-control", @placeholder = "año", @required = "true" })
+                                @Html.TextBoxFor(m => m.ano, new { @class = "form-control", @placeholder = "Año", @required = "true", @type = "number", @maxlength = "4" })
                                 @Html.ValidationMessageFor(m => m.ano, "", new { @class = "text-danger" })
+                                <div class="invalid-feedback">Ingrese el año del automóvil, solamente 4 dígitos</div>
                             </div>
 
                             <div style="display: flex; align-items: center; flex-direction: column;">
                                 <input type="submit" class="btn btn-primary btn-block" value="Registrar Automovil" style="margin-top: 20px; margin-bottom: 20px;">
                             </div>
-
                         }
                     </div>
                 </div>
