--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/RegistrarUsuario.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/RegistrarUsuario.cshtml
@@ -31,23 +31,23 @@
                                 @using (Html.BeginForm("RegistrarUsuario", "Usuario", FormMethod.Post, new { @class = "row g-3 needs-validation", novalidate = "novalidate" }))
                                 {
                                     <div class="col-12">
-                                        @Html.LabelFor(m => m.nombreUsuario, new { @class = "form-label" })
-                                        @Html.TextBoxFor(m => m.nombreUsuario, new { @class = "form-control", @id = "yourName", required = "required" })
-                                        <div class="invalid-feedback">Por favor, ingresa tu nombre.</div>
+                                        @Html.Label("Nombre de Usuario", new { @class = "form-label" })
+                                        @Html.TextBoxFor(m => m.nombreUsuario, new { @class = "form-control", @id = "yourName", @required = "required", @maxlength = "20" })
+                                        <div class="invalid-feedback">Por favor, ingresa tu nombre de usuario</div>
                                     </div>
 
                                     <div class="col-12">
-                                        @Html.LabelFor(m => m.emailUsuario, new { @class = "form-label" })
-                                        @Html.TextBoxFor(m => m.emailUsuario, new { @class = "form-control", @type = "email", @id = "yourEmail", required = "required" })
-                                        <div class="invalid-feedback">Por favor, introduce una dirección de correo electrónico válida.</div>
+                                        @Html.Label("Correo Electrónico", new { @class = "form-label" })
+                                        @Html.TextBoxFor(m => m.emailUsuario, new { @class = "form-control", @type = "email", @id = "yourEmail", @required = "required", @maxlength = "50" })
+                                        <div class="invalid-feedback">Por favor, introduce una dirección de correo electrónico válida</div>
                                     </div>
 
                                     <div class="col-12">
-                                        @Html.LabelFor(m => m.contrasenaUsuario, new { @class = "form-label" })
+                                        @Html.Label("Contraseña", new { @class = "form-label" })
                                         <div class="input-group has-validation">
                                             <span class="input-group-text" id="inputGroupPrepend"></span>
-                                            @Html.PasswordFor(m => m.contrasenaUsuario, new { @class = "form-control", @id = "yourUsername", required = "required" })
-                                            <div class="invalid-feedback">Por favor, elige un nombre de usuario.</div>
+                                            @Html.PasswordFor(m => m.contrasenaUsuario, new { @class = "form-control", @id = "yourPassword", @required = "required", @maxlength = "15", @minlength = "8" })
+                                            <div class="invalid-feedback">Por favor, ingresa una contraseña válida de mínimo 8 y máximo 15 caracteres</div>
                                         </div>
                                     </div>
 
